--- a/package.json
+++ b/package.json
@@ -46,15 +46,22 @@
 	"dependencies": {
 		"@supabase/ssr": "^0.3.0",
 		"@supabase/supabase-js": "^2.43.1",
+		"@toast-ui/editor": "^3.2.2",
+		"@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
+		"@types/dompurify": "^3.0.5",
+		"@types/marked": "^5.0.2",
 		"@types/sortablejs": "^1.15.8",
 		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
+		"dompurify": "^3.2.6",
 		"dotenv": "^17.2.1",
 		"embla-carousel-autoplay": "^8.1.3",
 		"embla-carousel-svelte": "^8.1.3",
 		"formsnap": "^1.0.0",
 		"lucide-svelte": "^0.379.0",
+		"marked": "^16.2.0",
 		"mode-watcher": "^0.3.0",
+		"prismjs": "^1.30.0",
 		"sharp": "^0.34.3",
 		"sortablejs": "^1.15.6",
 		"stripe": "^15.8.0",
