--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 	"dependencies": {
 		"@supabase/ssr": "^0.3.0",
 		"@supabase/supabase-js": "^2.43.1",
+		"@tanstack/svelte-query": "^5.85.5",
 		"@toast-ui/editor": "^3.2.2",
 		"@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
 		"@types/dompurify": "^3.0.5",
