--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"lucide-svelte": "^0.379.0",
 		"marked": "^16.2.0",
 		"mode-watcher": "^0.3.0",
+		"motion": "^12.23.12",
 		"prismjs": "^1.30.0",
 		"sharp": "^0.34.3",
 		"sortablejs": "^1.15.6",
