--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -74,9 +74,9 @@ enabled = true
 enabled = true
 # The base URL of your website. Used as an allow-list for redirects and for constructing URLs used
 # in emails.
-site_url = "http://localhost:5173/"
+site_url = "http://localhost:5176/"
 # A list of *exact* URLs that auth providers are permitted to redirect to post authentication.
-additional_redirect_urls = ["http://localhost:5173/**/*"]
+additional_redirect_urls = ["http://localhost:5176/onboarding", "http://localhost:5176/settings/security"]
 # How long tokens are valid for, in seconds. Defaults to 3600 (1 hour), maximum 604,800 (1 week).
 jwt_expiry = 3600
 # If disabled, the refresh token will never expire.
@@ -98,17 +98,17 @@ enable_signup = true
 # addresses. If disabled, only the new email is required to confirm.
 double_confirm_changes = true
 # If enabled, users need to confirm their email address before signing in.
-enable_confirmations = false
+enable_confirmations = true
 # Controls the minimum amount of time that must pass before sending another signup confirmation or password reset email.
-max_frequency = "1s"
+max_frequency = "60s"
 
-[auth.email.smtp]
-host="env(PRIVATE_SMTP_HOST)"
-port="env(PRIVATE_SMTP_PORT)"
-user="env(PRIVATE_SMTP_USER)"
-pass="env(PRIVATE_SMTP_PASSWORD)"
-admin_email="env(PRIVATE_SMTP_ADMIN_EMAIL)"
-sender_name="env(PRIVATE_SMTP_SENDER_NAME)"
+# [auth.email.smtp]
+# host="env(PRIVATE_SMTP_HOST)"
+# port="env(PRIVATE_SMTP_PORT)"
+# user="env(PRIVATE_SMTP_USER)"
+# pass="env(PRIVATE_SMTP_PASSWORD)"
+# admin_email="env(PRIVATE_SMTP_ADMIN_EMAIL)"
+# sender_name="env(PRIVATE_SMTP_SENDER_NAME)"
 
 # Uncomment to customize email template
 # [auth.email.template.invite]
