--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fingerprintjs/fingerprintjs": "^4.6.2",
 		"@supabase/ssr": "^0.3.0",
 		"@supabase/supabase-js": "^2.43.1",
 		"@tanstack/svelte-query": "^5.85.5",
