--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"mode-watcher": "^0.3.0",
 		"motion": "^12.23.12",
 		"prismjs": "^1.30.0",
+		"resend": "^6.0.2",
 		"sharp": "^0.34.3",
 		"sortablejs": "^1.15.6",
 		"stripe": "^15.8.0",
