--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"embla-carousel-autoplay": "^8.1.3",
 		"embla-carousel-svelte": "^8.1.3",
 		"formsnap": "^1.0.0",
+		"ioredis": "^5.7.0",
 		"lucide-svelte": "^0.379.0",
 		"marked": "^16.2.0",
 		"mode-watcher": "^0.3.0",
