--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@sveltejs/kit": "^2.5.20",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@tailwindcss/typography": "^0.5.10",
+		"@types/splitting": "^1.0.6",
 		"@typescript-eslint/eslint-plugin": "^8.0.0",
 		"@typescript-eslint/parser": "^8.0.0",
 		"autoprefixer": "^10.4.15",
@@ -61,7 +62,9 @@
 		"embla-carousel-autoplay": "^8.1.3",
 		"embla-carousel-svelte": "^8.1.3",
 		"formsnap": "^1.0.0",
+		"gsap": "^3.13.0",
 		"ioredis": "^5.7.0",
+		"lenis": "^1.3.15",
 		"lucide-svelte": "^0.379.0",
 		"marked": "^16.2.0",
 		"mode-watcher": "^0.3.0",
@@ -70,6 +73,7 @@
 		"resend": "^6.0.2",
 		"sharp": "^0.34.3",
 		"sortablejs": "^1.15.6",
+		"splitting": "^1.1.0",
 		"stripe": "^15.8.0",
 		"sveltekit-superforms": "^2.13.1",
 		"tailwind-merge": "^2.3.0",
