--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@sveltejs/kit": "^2.5.20",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@tailwindcss/typography": "^0.5.10",
+		"@types/leaflet.markercluster": "^1.5.6",
 		"@types/splitting": "^1.0.6",
 		"@typescript-eslint/eslint-plugin": "^8.0.0",
 		"@typescript-eslint/parser": "^8.0.0",
@@ -53,6 +54,7 @@
 		"@toast-ui/editor": "^3.2.2",
 		"@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
 		"@types/dompurify": "^3.0.5",
+		"@types/leaflet": "^1.9.21",
 		"@types/marked": "^5.0.2",
 		"@types/sortablejs": "^1.15.8",
 		"bits-ui": "^0.21.10",
@@ -65,6 +67,8 @@
 		"formsnap": "^1.0.0",
 		"gsap": "^3.13.0",
 		"ioredis": "^5.7.0",
+		"leaflet": "^1.9.4",
+		"leaflet.markercluster": "^1.5.3",
 		"lenis": "^1.3.15",
 		"lucide-svelte": "^0.379.0",
 		"marked": "^16.2.0",
