--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"test": "vitest run",
 		"lint": "eslint .",
 		"format": "prettier --write . --ignore-path .gitignore",
-		"format:check": "prettier --check . --ignore-path .gitignore"
+		"format:check": "prettier --check . --ignore-path .gitignore",
+		"geocode:shops": "tsx scripts/geocode-shops.ts",
+		"geocode:shops:prod": "NODE_ENV=production tsx scripts/geocode-shops.ts"
 	},
 	"devDependencies": {
 		"@iconify-json/bi": "^1.1.23",
@@ -39,6 +41,7 @@
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.4.1",
+		"tsx": "^4.21.0",
 		"typescript": "^5.9.3",
 		"unplugin-icons": "^0.19.0",
 		"vite": "^5.3.5",
