fix: corriger les boucles infinies dans les filtres /annuaire et mettre à jour le total pour le filtre 'Notre sélection'
- Supprimer le bloc réactif problématique dans /annuaire
- Ajouter handleCitySelect et handleCakeTypeSelect pour gérer les filtres explicitement
- Réinitialiser l'infinite scroll après filtrage
- Mettre à jour totalShops pour tous les filtres, y compris 'Notre sélection'
- Corriger le countQuery dans /annuaire/api pour prendre en compte verifiedOnly
- Supprimer la migration 143 (remplacée par le script TypeScript)
- Ajouter scripts/ au .gitignore

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"format": "prettier --write . --ignore-path .gitignore",
 		"format:check": "prettier --check . --ignore-path .gitignore",
 		"geocode:shops": "tsx scripts/geocode-shops.ts",
-		"geocode:shops:prod": "NODE_ENV=production tsx scripts/geocode-shops.ts"
+		"geocode:shops:prod": "NODE_ENV=production tsx scripts/geocode-shops.ts",
+		"create:test-shops": "tsx scripts/create-test-shops.ts",
+		"create:test-shops:prod": "NODE_ENV=production tsx scripts/create-test-shops.ts"
 	},
 	"devDependencies": {
 		"@iconify-json/bi": "^1.1.23",
