feat: simplifier storage-utils pour Cloudinary uniquement et alléger animations /annuaire
- Supprimer tout le code Supabase Storage de storage-utils.ts
- Ne gérer que Cloudinary (toutes les images sont migrées)
- Ajouter suppression des images de fond dans deleteAllShopImages
- Alléger les animations infinite scroll de /annuaire (comme /tous-les-gateaux)
- Garder les scripts npm dans package.json pour usage local

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"geocode:shops": "tsx scripts/geocode-shops.ts",
 		"geocode:shops:prod": "NODE_ENV=production tsx scripts/geocode-shops.ts",
 		"create:test-shops": "tsx scripts/create-test-shops.ts",
-		"create:test-shops:prod": "NODE_ENV=production tsx scripts/create-test-shops.ts"
+		"create:test-shops:prod": "NODE_ENV=production tsx scripts/create-test-shops.ts",
+		"migrate:shop-logos": "tsx scripts/migrate-shop-logos-to-cloudinary.ts",
+		"migrate:shop-logos:prod": "NODE_ENV=production tsx scripts/migrate-shop-logos-to-cloudinary.ts"
 	},
 	"devDependencies": {
 		"@iconify-json/bi": "^1.1.23",
