--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
 		"typescript": "^5.9.3",
 		"unplugin-icons": "^0.19.0",
 		"vite": "^5.3.5",
-		"vitest": "^2.0.5"
+		"vite-plugin-pwa": "^1.2.0",
+		"vitest": "^2.0.5",
+		"workbox-window": "^7.4.0"
 	},
 	"type": "module",
 	"dependencies": {
