--- a/package.json
+++ b/package.json
@@ -54,9 +54,7 @@
 		"typescript": "^5.9.3",
 		"unplugin-icons": "^0.19.0",
 		"vite": "^5.3.5",
-		"vite-plugin-pwa": "^1.2.0",
-		"vitest": "^2.0.5",
-		"workbox-window": "^7.4.0"
+		"vitest": "^2.0.5"
 	},
 	"type": "module",
 	"dependencies": {
@@ -89,7 +87,6 @@
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
 		"vaul-svelte": "^0.3.0",
-		"web-push": "^3.6.7",
 		"zod": "^3.23.8"
 	},
 	"engines": {
