feat: add email campaigns system and optimize shop/product ordering
- Add email campaigns system with templates and segments
- Add unsubscribe route for email management
- Optimize shop and product ordering with improved hash functions
- Add performance indexes for shops and products queries
- Update pricing and subscription pages
- Improve affiliation dashboard
- Remove obsolete functions report

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ supabase/dumps/
 # Documentation et règles Cursor (ne pas déployer)
 docs/
 .cursor/
+
+# Campagnes email marketing (données sensibles - listes d'emails)
+email-campaigns/campaigns/*.json
+!email-campaigns/campaigns/.gitkeep
+!email-campaigns/campaigns/example.json
