--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
 		"validate:migration": "tsx scripts/validate-migration-safety.ts",
 		"validate:migrations": "tsx scripts/validate-migration-safety.ts all",
 		"backup:before-migration": "dotenv -e .env.local -- tsx scripts/backup-before-migration.ts",
-		"resend:sync-pastries": "dotenv -e .env.local -- tsx scripts/sync-all-pastries-to-resend.ts"
+		"resend:sync-pastries": "dotenv -e .env.local -- tsx scripts/sync-all-pastries-to-resend.ts",
+		"send:campaign": "dotenv -e .env.local -- tsx scripts/send-marketing-campaign.ts"
 	},
 	"devDependencies": {
 		"@iconify-json/bi": "^1.1.23",
